src/objects/workday_benefits__x.object
<CustomObject>
    <description>workday.benefits</description>
    <externalDataSource>WorkDay_HRIS</externalDataSource>
    <externalName>workday.benefits</externalName>
    <fields>
        <fullName>Employee__c</fullName>
        <externalDeveloperName>employee_id</externalDeveloperName>
        <label>Employee</label>
        <length>20</length>
        <referenceTargetField>Contact.employee_id__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Benefits - Workday</relationshipLabel>
        <relationshipName>workday_benefits</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>benefit_plan__c</fullName>
        <description>benefit_plan</description>
        <externalDeveloperName>benefit_plan</externalDeveloperName>
        <label>benefit_plan</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coverage__c</fullName>
        <description>coverage</description>
        <externalDeveloperName>coverage</externalDeveloperName>
        <label>coverage</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_id__c</fullName>
        <description>employee_id</description>
        <externalDeveloperName>employee_id</externalDeveloperName>
        <label>employee_id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enroll_dependents__c</fullName>
        <description>enroll_dependents</description>
        <externalDeveloperName>enroll_dependents</externalDeveloperName>
        <label>enroll_dependents</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>monthly_employee_cost__c</fullName>
        <description>monthly_employee_cost</description>
        <externalDeveloperName>monthly_employee_cost</externalDeveloperName>
        <label>monthly_employee_cost</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>workday.benefits</label>
    <listViews>
        <fullName>All</fullName>
        <columns>employee_id__c</columns>
        <columns>Id</columns>
        <columns>coverage__c</columns>
        <columns>id__c</columns>
        <columns>monthly_employee_cost__c</columns>
        <columns>status__c</columns>
        <columns>enroll_dependents__c</columns>
        <columns>ExternalId</columns>
        <columns>benefit_plan__c</columns>
        <columns>DisplayUrl</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>workday.benefits</pluralLabel>
</CustomObject>